src/style.css
/* This is where you can make changes to the
appearance of your different blocks.

For info on CSS, copy and paste the link
below into your browser!

https://www.w3schools.com/css/default.asp

*/

/* float the service dock to the right */
#servicedock {
  float: right;
}

.b1{
    background-image: url(../img/JungleNew.jpg);
    background-size: 100%;
    background-position: center;
    background-repeat: no-repeat;

    //opacity: 0.3;

}

.b2{
    background-image: url(../img/remote2.jpg);
    background-size: 100%;
    background-position: center;
    background-repeat: no-repeat;

    //opacity: 0.3;

}
.buttonrl{
    /*Give your button block some style!
    Add color, change the border, and
    change the size using CSS styling*/
    background-color:rgb(140, 217, 140);
    border:solid;
    border-color:rgb(50, 150, 50);
    padding-top: 10px;
    padding-bottom: 10px;
    padding-left: 10px;
    padding-right: 10px;
    width:50%;
    transition-duration: 0.3s;
    cursor: pointer;
    border-radius: 5px;
    box-shadow: 0 9px rgb(25, 80, 25);
    
}

.buttontb{
    /*Give your button block some style!
    Add color, change the border, and
    change the size using CSS styling*/
    background-color:rgb(140, 217, 140);
    border:solid;
    border-color:rgb(50, 150, 50);
    padding-top: 10px;
    padding-bottom: 10px;
    padding-left: 10px;
    padding-right: 10px;
    width:70%;
    transition-duration: 0.3s;
    cursor: pointer;
    border-radius: 5px;
    box-shadow: 0 9px rgb(25, 80, 25);
}

.buttonrl:hover{
    background-color:rgb(50, 150, 50);
    color: white;

}
.buttontb:hover{
    background-color:rgb(50, 150, 50);
    color: white;

}

.buttonrl:active{
    background-color: #3e8e41;
    box-shadow: 0 0px #666;
    transform: translateY(9px);

}
.buttontb:active{
    background-color: #3e8e41;
    box-shadow: 0 0px #666;
    transform: translateY(8px);
    
}
.submit{
    /*Give your button block some style!
    Add color, change the border, and
    change the size using CSS styling*/
    background-color:rgb(140, 217, 140);
    border:solid;
    border-color:rgb(50, 150, 50);
    padding-top: 30px;
    padding-bottom: 10px;
    padding-left: 30px;
    padding-right: 30px;
    transition-duration: 0.3s;
    cursor: pointer;
    border-radius: 5px;
    border-width: 6px;
    font-size: 100px;
    font-family: papyrus;
}
.submit:hover{
    background-color:rgb(50, 150, 50);
    color: white;

}




.sliderBlock{
    /*Give your slider block some style!
    Add color, change the border, and
    change the size using CSS styling*/
    background-color:orange;
    border:solid;
    padding-top: 10px;
    padding-bottom: 10px;
    padding-left: 40px;
    width:30%;
}

.textBlock{
    /*Give your text block some style!
    Add color, change the border, and
    change the size using CSS styling*/
    background-color:lightgreen;
    border:solid;
    padding-top: 10px;
    padding-bottom: 10px;
    padding-left: 40px;
    width:30%;
}

/* homepage styling */
.table_links {
  border: 1px solid black;
  padding: 10px;
}
.remote {
  border: 1px solid black;
  vertical-align: middle;
  text-align: center;
  width: 200px;
  height: 100px;
  background-color: lightgreen;
}
.local {
  border: 1px solid black;
  vertical-align: middle;
  text-align: center;
  width: 200px;
  height: 100px;
  background-color: pink;
}
.documentation {
  border: 1px solid black;
  vertical-align: middle;
  text-align: center;
  width: 200px;
  height: 100px;
  background-color: lightyellow;
}

/* local styling for cloud interaction */
.cloud_check {
  padding: 5px;
  background-color: lightyellow;
}
.cloud_table {
  padding: 5px;
}
.cloud_table td {
  padding: 5px;
	vertical-align: top;
}
.cloud_active {
	background-color: lightgreen;
}
.cloud_inactive {
	background-color: none;
}

/* documentation styles */
.documentation_image {
  border: 1px solid black;
}
.documentation_code {
  padding: 5px;
  background-color: lightyellow;
}
.bcenter{
    text-align: center;
    

}


.center {
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 10px;
  width: 20%;
  height: 20%;
}

.header {
  font-size: 75;
  text-align: center;
  font-family: papyrus;
  color: white;
}

.paragraph{
  font-size: 50;
  text-align: center;
  font-family: papyrus;
  color: white;
}

